--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,7 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Raleway:ital,wght@0,100;0,500;0,600;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700&display=swap');
+
+:root {
+    --green: #27ae60;
+    --black: #192a56;
+    --light-color: #666;
+    --box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
+}
 
 *{
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Munito', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,11 +17,123 @@
     border: none;
     text-transform: capitalize;
     transition: all .2s linear;
+    color: #fff;
 }
 
 html {
     font-size: 62.5%;
-    scroll-behavior: smooth;
-    scroll-padding-top: 8rem;
     overflow: hidden;
+    scroll-padding-top: 5.5rem;
+    scroll-behavior: smooth;
+}
+
+#logo {
+    width: 15rem;
+} 
+
+header {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    nav-left: 0;
+    right: 0;
+    background: rgb(25, 22, 34);
+    padding: 1rem 7%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1000;
+    box-shadow: var(--box-shadow);
+}
+
+header .logo {
+    color: var(--black);
+    font-size: 2.5rem;
+    font-weight: bolder;
+}
+
+header .navbar a {
+    font-size: 1.7rem;
+    border-radius: .5rem;
+    padding: .5rem;
+    color: var(--light-color);
+    margin-left: 3rem;
+}
+
+header .navbar a.active,
+header .navbar a:hover {
+    color: #fff;
+    background: var(--green);
+}
+
+header .icons i,
+header .icons a {
+    cursor: pointer;
+    margin-left: .5rem;
+    width: 3.5rem;
+    height: 3.5rem;
+    line-height: 4.5rem;
+    text-align: center;
+    font-size: 1.7rem;
+    color: var(--black);
+    border-radius: 50%;
+    background: #eee;    
+}
+
+header .icons i:hover,
+header .icons a:hover {
+    color: #fff;
+    background: var(--green);
+    transform: rotate(360deg);
+} 
+
+header .icons #menu-bars {
+    display: none;
+}
+
+
+/*--- ========== Medias --- ==========*/
+
+@media (max-width: 991px) {
+    html{
+        font-size: 55%;
+    }
+
+    header {
+        padding: 1rem 2rem;
+        text-align: center;
+    }
+
+}
+
+@media (max-width: 768px) {
+    header .icons #menu-bars {
+        display: inline-block;
+    }
+
+    header .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background: #fff;
+        border-top: .1rem solid rgba(0, 0, 0, .2);
+        border-bottom: .1rem solid rgba(0, 0, 0, .2);
+        padding: 1rem;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    header .navbar a {
+        display: block;
+        padding: 1.5rem;
+        margin: 1rem;
+        font-size: 2rem;
+        background: #eee;
+    }
+}
+
+@media (max-width: 991px) {
+    html{
+        font-size: 50%;
+    }
 }
