--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -22,7 +22,6 @@
 
 html {
     font-size: 62.5%;
-    overflow: hidden;
     scroll-padding-top: 5.5rem;
     scroll-behavior: smooth;
 }
@@ -30,6 +29,30 @@ html {
 #logo {
     width: 15rem;
 } 
+
+section {
+    padding: 2rem 9%;
+}
+
+section:nth-child(even) {
+    background: #eee;
+}
+
+.btn {
+    margin-top: 1rem;
+    display: inline-block;
+    font-size: 1.7rem;
+    color: #fff;
+    background: var(--black);
+    border-radius: .5rem;
+    cursor: pointer;
+    padding: .8rem;
+}
+
+.btn:hover {
+    background: var(--green);
+    letter-spacing: .1rem;
+}
 
 header {
     width: 100%;
@@ -143,6 +166,53 @@ header .icons #menu-bars {
     font-size: 5rem;
 }
 
+.home .home-slider .slide {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 5rem;
+    padding-top: 9rem;
+}
+
+.home .home-slider .slide .content {
+    flex: 1 1 45rem;
+}
+
+.home .home-slider .slide .image {
+    flex: 1 1 45rem;
+}
+
+.home .home-slider .slide .image img {
+    width: 100%;
+}
+
+.home .home-slider .slide .content span {
+    color: var(--green);
+    font-size: 2.5rem;
+}
+
+.home .home-slider .slide .content h3 {
+    color: var(--black);
+    font-size: 7rem;
+}
+
+.home .home-slider .slide .content p {
+    color: var(--light-color);
+    font-size: 2.2rem;
+    padding: .5rem 0;
+    line-height: 1.5;
+}
+
+.swiper-pagination-bullet-active {
+    background: var(--green);
+}
+
+
+
+
+
+
+
 /*--- ========== Medias --- ==========*/
 
 @media (max-width: 991px) {
@@ -153,6 +223,10 @@ header .icons #menu-bars {
     header {
         padding: 1rem 2rem;
         text-align: center;
+    }
+
+    header {
+        padding:2rem;
     }
 
 }
@@ -190,6 +264,10 @@ header .icons #menu-bars {
         width: 90%;
         margin: 0 1rem;
     }
+
+    .home .home-slider .slide .content h3 {
+        font-size: 5rem;
+    }
 }
 
 @media (max-width: 991px) {
@@ -197,3 +275,4 @@ header .icons #menu-bars {
         font-size: 50%;
     }
 }
+
